--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 fastapi==0.105.0
 uvicorn==0.24.0
-pydantic==2.5.2
-sqlalchemy==2.0.23
-geoalchemy2==0.14.1
+GeoAlchemy2==0.14.1
+SQLAlchemy==2.0.23
 psycopg2-binary==2.9.9
 python-dotenv==1.0.0
+pydantic==2.5.2
 shapely==2.0.2
-numpy==1.24.3
+requests==2.32.3
+pytest==8.3.5
+python-multipart==0.0.20
